--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ nav::before{
 .hero{
     width: 100%;
     height: 100vh;
-    background: url(/images/main-photo.jpg) center no-repeat;    /* Need to be fixed */
+    background: url('../images/main-photo.jpg') center no-repeat;    /* Need to be fixed */
     background-size: cover;
     display: flex;
     align-items: center;
